--- a/styles.css
+++ b/styles.css
@@ -339,7 +339,7 @@ footer {
 }
 
 .top-offset {
-    top: 92px; /* Adjust as needed */
+    top: 92px; 
 }
 
 .back-container {
@@ -370,6 +370,24 @@ footer {
     height: 15px; 
 }
 
+#subcategory-section {
+    display: none;
+    opacity: 0;
+    transform: translateX(100%);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+#subcategory-section.show {
+    display: block;
+    opacity: 1;
+    transform: translateX(0);
+}
+
+#category-section.hide {
+    opacity: 0;
+    transform: translateX(-100%);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
 
 #selected-category {
     background: #fff;
@@ -402,38 +420,44 @@ footer {
     color: #333;
 }
 
+.subcategories {
+    background: #F6F6F6;
+    border-radius: 10px;
+    max-width: 900px;
+    width: 100%;   
+}
 
 .subcategory-grid {
     display: flex;
     flex-wrap: wrap;
     gap: 25px;
     row-gap: 30px;
-    justify-content: center;
+    margin-bottom: 45px;
 }
 
 .subcategory {
     background: #fff;
     border-radius: 16px;
-    text-align: right;
     padding: 20px;
-    width: 280px;
-    height: 30px;
+    width: 380px;
+    height: 30px; 
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
     display: flex;
-    flex-direction: column;
-    align-items: right;
-    justify-content: center;
+    align-items: center; 
+    gap: 10px; 
+    flex-direction: row-reverse; 
     transition: transform 0.3s;
+    text-align: left;
 }
 
-.subcategory img {
-    width: 50px;
-    height: 50px;
-    margin-bottom: 10px;
+.arrow-icon {
+    width: 16px;
+    height: 16px;
 }
+
 
 /* Category Names */
-.subcategory p {
+.subcategory-text {
     margin: 0;
     font-size: 16px;
     color: #333;
@@ -443,3 +467,5 @@ footer {
     background: #fff;
     transform: scale(1.05);
 }
+
+
