--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ nav ul ul {
 
 .dropdown-content {
     display: none;
-    position: relative;
+    position: absolute;
     background-color: #f9f9f9;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -565,4 +565,3 @@ footer {
 .subcategory-text {
     margin: 0; /* Ensure there's no extra margin */
 }
-
