--- a/styles.css
+++ b/styles.css
@@ -492,7 +492,7 @@ footer {
     flex-wrap: wrap;
     position: relative;
     gap:10px;
-    margin-bottom: 150px;
+    margin-bottom: 60px;
 
 }
 
@@ -516,7 +516,7 @@ footer {
 .solution-box {
     background: #fff;
     padding: 25px 30px; /* Adjust padding for a tighter fit */
-    padding-top: 10px;
+    padding-top: 30px;
     border-radius: 12px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     margin-top: 80px;
@@ -524,23 +524,26 @@ footer {
     margin-left: auto;
     margin-right: auto;
     width: 828px;
-    height: 5253.5px;
+    height: 5570.5px;
+    font-size: 20px;
 }
 
 /* Solution Title */
 .h2-solution {
-    font-size: 22px;
+    font-size: 25px;
     background: #87D3E0;
-    border-radius:5px; ;
-    padding: 4px;
-    width: 130px;
-    margin-right:24px;
+    border-radius:6px; ;
+    padding: 5px;
+    width: 135px;
+    margin-right:27px;
     text-align: center;
-    height: 30px;
-    padding-right:8px ;
-    padding-left: 8px;
+    height: 35px;
+    padding-right:20px ;
+    padding-left: 20px;
+    padding-bottom: 10px;
     color: #fff;
-   margin-bottom:-80px ;
+   position: relative;
+   top: 95px;
 
 }
 
