--- a/styles.css
+++ b/styles.css
@@ -209,6 +209,7 @@ main {
     margin-top: 160px;
     line-height: 1.4; 
     margin-right: 64px;
+    
 }
 
 /* Intro of the page */
@@ -481,8 +482,8 @@ footer {
     font-size: 40px ;
     font-weight: bold;
     color: #292570;
-    margin-top: 200px;
-    margin-bottom: 30px;
+    margin-top: 150px;
+    margin-bottom: 20px;
 }
 
 /* Subcategory Container */
@@ -517,15 +518,16 @@ footer {
     background: #fff;
     padding: 25px 30px; /* Adjust padding for a tighter fit */
     padding-top: 30px;
+    padding-bottom: auto;
     border-radius: 12px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    margin-top: 80px;
-    display: block; /* Ensure it's visible */
+    margin-top: 8px;
     margin-left: auto;
     margin-right: auto;
-    width: 828px;
-    height: 5570.5px;
+    display: block; /* Ensure it's visible */
+      width: 828px;
     font-size: 20px;
+   
 }
 
 /* Solution Title */
@@ -543,7 +545,7 @@ footer {
     padding-bottom: 10px;
     color: #fff;
    position: relative;
-   top: 95px;
+   top: 50px;
 
 }
 
