--- a/styles.css
+++ b/styles.css
@@ -503,9 +503,12 @@ footer {
     flex: 1 1 calc(33.333% - 40px); /* Adjust width as needed */
     text-align: right;
     display: flex;
+    outline: none;
+    cursor: pointer;
 }
 
-.subcategory-item:hover  {
+.subcategory-item:hover,
+.subcategory-item.selected{
     background-color: #d8d4d4; 
     border-radius: 4px;
     width: 400px;
@@ -572,4 +575,13 @@ footer {
 }
 .subcategory-text {
     margin: 0; 
+}
+.show {
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.hide {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
 }
